2010-04-01  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* g++.dg/cpp/_Pragma1.C: Skip on alpha*-dec-osf*.
	* g++.dg/eh/spbp.C: Likewise.
	* g++.dg/ext/label13.C (C::C): xfail dg-bogus on alpha*-dec-osf*.
	* g++.dg/other/pragma-ep-1.C: Properly define p, remove
	superfluous casts.
	* gcc.dg/mtune.c: Add dg-bogus "mcpu".
	* objc.dg/dwarf-1.m: Skip on  alpha*-dec-osf*.
	* objc.dg/dwarf-2.m: Likewise.

2010-03-31  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/43464
	* gcc.dg/graphite/id-pr43464.c: New.
	* gcc.dg/graphite/id-pr43464-1.c: New.

2010-03-31  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/43351
	* gcc.dg/graphite/id-pr43351.c

2010-03-31  Iain Sandoe  <iain.sandoe@sandoe-acoustics.co.uk>

	PR testsuite/35165
	* obj-c++.dg/try-catch-9.mm: Don't XFAIL m32 NeXT runtime.
	* obj-c++.dg/try-catch-2.mm: Ditto.
	* obj-c++.dg/lookup-2.mm: Ditto.
	* obj-c++.dg/encode-8.m: Ditto.
	* obj-c++.dg/cxx-ivars-2.mm: Ditto.
	* obj-c++.dg/cxx-ivars-3.mm: Skip for GNU, XFail for m64 NeXT.
	* obj-c++.dg/const-str-10.mm: Skip for GNU, match .quad for m64 NeXT.
	* obj-c++.dg/const-str-11.mm: Ditto.
	* obj-c++.dg/const-str-9.mm: Ditto.
	* obj-c++.dg/bitfield-3.mm: Skip for GNU runtime.
	* obj-c++.dg/bitfield-2.mm: XFAIL run for m64 NeXT runtime.
	* obj-c++.dg/except-1.mm: Ditto.
	* obj-c++.dg/const-str-7.mm: Ditto.
	* obj-c++.dg/cxx-ivars-1.mm: Ditto.
	* obj-c++.dg/const-str-3.mm: Ditto.
	* obj-c++.dg/const-str-7.mm: Ditto.
	* obj-c++.dg/stubify-2.mm: Change dump file name.

	PR objc++/23613
	* gcc/testsuite/objc-obj-c++-shared/next-mapping.h (CLASSPTRFIELD):
	New macro.
	* gcc/testsuite/obj-c++.dg/isa-field-1.mm: Use new CLASSPTRFIELD macro.
	Remove dg-xfail-if.

2010-03-31  Martin Jambor  <mjambor@suse.cz>

	* gcc.dg/guality/inline-params.c: Disable early inlining.  Xfail run
	only with -O2, -O3 or -Os and not with -fwhopr.

2010-03-31  Dodji Seketeli  <dodji@redhat.com>

	PR c++/43558
	* g++.dg/template/typedef31.C: New test.
